--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <body>
 
     <header>
+      <!--        Inizio NavBar Top       -->
       <div class="navbar-top-cont">
         <div class="navbar-top navbar container font clearfix">
           <div class="menu1 fl">
@@ -21,14 +22,18 @@
           <div class="menu2 fr">
             <ul class="">
               <li><img src="img/search-icon.png" alt="search"></li>
-              <li><a href="#">Log in</a></li>
-              <li><a href="#">GetHubspotFree</a></li>
+              <li><a class="button1" href="#">Log in</a></li>
+              <li><a class="button2"href="#">GetHubspotFree</a></li>
             </ul>
           </div>
         </div>
       </div>
+      <!--        fine NavBar Top       -->
+
+
+      <!--        inizio NavBar Bottom       -->
       <div class="navbar-bottom-cont">
-        <div class="navba-bottom navbar container font clearfix">
+        <div class="navbar-bottom navbar container font clearfix">
           <div class="menu1 fl">
             <ul>
               <li><a href="#"><img src="img/logo.svg" alt="logo"></a></li>
@@ -44,6 +49,21 @@
             </ul>
           </div>
         </div>
+      </div>
+        <!--          fine NavBar Bottom         -->
+
+      <!--          inizio Jumbotron         -->
+      <div class="jumbotron-cont">
+        <div class="jumbotron container  font">
+          <h1>There is a better way to <br> grow.</h1>
+          <p>Marketing, sales, and service software that helps your business grow without <br> compromise. Because " good for the business" should also mean "good for the <br> customer".</p>
+          <p><a class="button2" href="#">GetHubspotFree</a></p>
+          <p>Get Started with FREE tools, and upgrade as you grow</p>
+        </div>
+      </div>
+      <!--        fine Jumbotron       -->
+
+
     </header>
 
   </body>
