--- a/index.html
+++ b/index.html
@@ -56,15 +56,26 @@
       <div class="jumbotron-cont">
         <div class="jumbotron container  font">
           <h1>There is a better way to <br> grow.</h1>
-          <p>Marketing, sales, and service software that helps your business grow without <br> compromise. Because " good for the business" should also mean "good for the <br> customer".</p>
+          <p class="weight">Marketing, sales, and service software that helps your business grow without <br> compromise. Because " good for the business" should also mean "good for the <br> customer".</p>
           <p><a class="button2" href="#">GetHubspotFree</a></p>
-          <p>Get Started with FREE tools, and upgrade as you grow</p>
+          <p class="weight">Get Started with FREE tools, and upgrade as you grow</p>
         </div>
       </div>
       <!--        fine Jumbotron       -->
-
-
     </header>
+
+    <main class="font">
+      <div class="cube-container container">
+        <div class="cube-content">
+          <img src="img/cubo.png" alt="libretto">
+          <h2>Powerful Alone. Better Together</h2>
+          <p class="weight">HubSpot offers a full stack of software for marketing, sales, and customer service with a completely free CRM at its core. They're powerfull alone - but even better when used together</p>
+
+        </div>
+
+      </div>
+
+    </main>
 
   </body>
 </html>
