parte del primo box nel main

--- a/index.html
+++ b/index.html
@@ -67,12 +67,26 @@
     <main class="font">
       <div class="cube-container container">
         <div class="cube-content">
-          <img src="img/cubo.png" alt="libretto">
+          <img src="img/cubo.png" alt="cubo">
           <h2>Powerful Alone. Better Together</h2>
           <p class="weight">HubSpot offers a full stack of software for marketing, sales, and customer service with a completely free CRM at its core. They're powerfull alone - but even better when used together</p>
-
         </div>
-
+      </div>
+      <div class="middle-cont container clearfix">
+        <div class="learnmore fl">
+          <img src="img/libretto.png" alt="libretto">
+          <div><a class="button2" href="#">Learn More</a></div>
+        </div>
+        <div class="freehub  fl">
+          <h3>Free Hubspot CRM</h3>
+          <p class="weight">Everything you need to organize, track, and build better relationships with leads and custoomers. Yes it's free. Forever.</p>
+          <div class="freehub-popolar  clearfix">
+            <p class="fl">POPOLAR FEATURE</p>
+            <div class="fl">
+              <hr>
+            </div>
+          </div>
+        </div>
       </div>
 
     </main>
