3 box float left

--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html lang="it" dir="ltr">
   <head>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800&display=swap" rel="stylesheet">
     <title>Hubspot</title>
   </head>
   <body>
@@ -15,7 +16,7 @@
         <div class="navbar-top navbar container font clearfix">
           <div class="menu1 fl">
             <ul>
-              <li><a href="#">&xcirc; English ∨</a></li>
+              <li><a href="#"><i class="fa fa-globe" aria-hidden="true"></i> English <i class="fa fa-angle-down" aria-hidden="true"></i></a></li>
               <li><a href="#">Contact Us</a></li>
             </ul>
           </div>
@@ -41,11 +42,11 @@
           </div>
           <div class="menu2 fr">
             <ul class="">
-              <li><a href="#">Software  ∨</a></li>
+              <li><a href="#">Software  <i class="fa fa-angle-down" aria-hidden="true"></i></a></li>
               <li><a href="#">Pricing</a></li>
-              <li><a href="#">Resources  ∨</a></li>
-              <li><a href="#">Partners  ∨</a></li>
-              <li><a href="#">About  ∨</a></li>
+              <li><a href="#">Resources  <i class="fa fa-angle-down" aria-hidden="true"></i></a></li>
+              <li><a href="#">Partners  <i class="fa fa-angle-down" aria-hidden="true"></i></a></li>
+              <li><a href="#">About  <i class="fa fa-angle-down" aria-hidden="true"></i></a></li>
             </ul>
           </div>
         </div>
@@ -64,7 +65,12 @@
       <!--        fine Jumbotron       -->
     </header>
 
+
+
+    <!--      inizio main     -->
     <main class="font">
+
+      <!--        inizio box cubo        -->
       <div class="cube-container container">
         <div class="cube-content">
           <img src="img/cubo.png" alt="cubo">
@@ -72,6 +78,10 @@
           <p class="weight">HubSpot offers a full stack of software for marketing, sales, and customer service with a completely free CRM at its core. They're powerfull alone - but even better when used together</p>
         </div>
       </div>
+      <!--        fine box cubo       -->
+
+
+      <!--        inizio primo box width 100%       -->
       <div class="middle-cont container clearfix">
         <div class="learnmore fl">
           <img src="img/libretto.png" alt="libretto">
@@ -80,16 +90,82 @@
         <div class="freehub  fl">
           <h3>Free Hubspot CRM</h3>
           <p class="weight">Everything you need to organize, track, and build better relationships with leads and custoomers. Yes it's free. Forever.</p>
-          <div class="freehub-popolar  clearfix">
-            <p class="fl">POPOLAR FEATURE</p>
+          <div class="row clearfix">
+            <div class="freehub-popolar fl">
+              <span>POPOLAR FEATURE</span>
+            </div>
             <div class="fl">
               <hr>
             </div>
           </div>
+          <div class="clearfix">
+            <ul>
+              <li><i class="fa fa-check-circle" aria-hidden="true"></i><span>Contanct Insight</span></li>
+              <li><i class="fa fa-check-circle" aria-hidden="true"></i><span>Deals</span></li>
+              <li><i class="fa fa-check-circle" aria-hidden="true"></i><span>Task</span></li>
+            </ul>
+          </div>
         </div>
       </div>
+      <!--        fineprimo box 100% width       -->
+
+      <!--        inizio secondo box 3-float-left       -->
+      <div class="hubs-cont container clearfix">
+        <div class="box-hub box-hub-1 fl clearfix">
+          <div class="box-hub-content bhc1 ">
+            <img src="img/marketing-hub.png" alt="Marketing-Hub">
+            <h3>Marketing Hub</h3>
+            <p>Marketing software to help you grow traffic, convert more visitors, and run complete inbound marketing campeign at scale.</p>
+            <p>POPOLAR FEATURE</p>
+            <ul>
+              <li><i class="fa fa-check-circle" aria-hidden="true"></i>Lead Generation</li>
+              <li><i class="fa fa-check-circle" aria-hidden="true"></i>Marketing Automation</li>
+              <li><i class="fa fa-check-circle" aria-hidden="true"></i>Analitycs</li>
+            </ul>
+            <div><a class="button2" href="#">Learn More</a></div>
+          </div>
+        </div>
+
+
+        <div class="box-hub box-hub-2 fl">
+          <div class="box-hub-content bhc2">
+            <img src="img/sales-hub.png" alt="Sales-Hub">
+            <h3>Sales Hub</h3>
+            <p>Time-saving sales software that helps you get deeper insights into prospects, automate the tasks you hate, and close more deals faster.</p>
+            <p>POPOLAR FEATURE</p>
+            <div class="">
+              <ul>
+                <li><i class="fa fa-check-circle" aria-hidden="true"></i>Email Tracking</li>
+                <li><i class="fa fa-check-circle" aria-hidden="true"></i>Meeting Scheduling</li>
+                <li><i class="fa fa-check-circle" aria-hidden="true"></i>Email Automation</li>
+              </ul>
+            </div>
+            <div><a class="button2" href="#">Learn More</a></div>
+          </div>
+        </div>
+
+
+        <div class="box-hub box-hub-3 fl">
+          <div class="box-hub-content bhc3">
+            <img src="img/service-hub.png" alt="Service-Hub">
+            <h3>Marketing Hub</h3>
+            <p>Marketing software to help you grow traffic, convert more visitors, and run complete inbound marketing campeign at scale.</p>
+            <p>POPOLAR FEATURE</p>
+            <ul>
+              <li><i class="fa fa-check-circle" aria-hidden="true"></i>Lead Generation</li>
+              <li><i class="fa fa-check-circle" aria-hidden="true"></i>Marketing Automation</li>
+              <li><i class="fa fa-check-circle" aria-hidden="true"></i>Analitycs</li>
+            </ul>
+            <p><a class="button2" href="#">Learn More</a></p>
+          </div>
+        </div>
+
+
+      </div>
+
 
     </main>
+    <!--      fine main     -->
 
   </body>
 </html>
