--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
         </div>
         <div class="freehub  fl">
           <h3>Free Hubspot CRM</h3>
-          <p class="weight">Everything you need to organize, track, and build better relationships with leads and custoomers. Yes it's free. Forever.</p>
+          <p class="weight">Everything you need to organize, track, and build better relationships with leads and custoomers. Yes it's 100% free. Forever.</p>
           <div class="row clearfix">
             <div class="freehub-popolar fl">
               <span>POPOLAR FEATURE</span>
@@ -111,16 +111,16 @@
 
       <!--        inizio secondo box 3-float-left       -->
       <div class="hubs-cont container clearfix">
-        <div class="box-hub box-hub-1 fl clearfix">
-          <div class="box-hub-content bhc1 ">
+        <div class="box-hub box-hub-1 fl ">
+          <div class="box-hub-content bhc1">
             <img src="img/marketing-hub.png" alt="Marketing-Hub">
             <h3>Marketing Hub</h3>
             <p>Marketing software to help you grow traffic, convert more visitors, and run complete inbound marketing campeign at scale.</p>
             <p>POPOLAR FEATURE</p>
             <ul>
-              <li><i class="fa fa-check-circle" aria-hidden="true"></i>Lead Generation</li>
-              <li><i class="fa fa-check-circle" aria-hidden="true"></i>Marketing Automation</li>
-              <li><i class="fa fa-check-circle" aria-hidden="true"></i>Analitycs</li>
+              <li><i class="fa fa-check-circle" aria-hidden="true"></i><span>Lead Generation</span></li>
+              <li><i class="fa fa-check-circle" aria-hidden="true"></i><span>Marketing Automation</span></li>
+              <li><i class="fa fa-check-circle" aria-hidden="true"></i><span>Analitycs</span></li>
             </ul>
             <div><a class="button2" href="#">Learn More</a></div>
           </div>
@@ -135,9 +135,9 @@
             <p>POPOLAR FEATURE</p>
             <div class="">
               <ul>
-                <li><i class="fa fa-check-circle" aria-hidden="true"></i>Email Tracking</li>
-                <li><i class="fa fa-check-circle" aria-hidden="true"></i>Meeting Scheduling</li>
-                <li><i class="fa fa-check-circle" aria-hidden="true"></i>Email Automation</li>
+                <li><i class="fa fa-check-circle" aria-hidden="true"></i><span>Email Tracking</span></li>
+                <li><i class="fa fa-check-circle" aria-hidden="true"></i><span>Meeting Scheduling</span></li>
+                <li><i class="fa fa-check-circle" aria-hidden="true"></i><span>Email Automation</span></li>
               </ul>
             </div>
             <div><a class="button2" href="#">Learn More</a></div>
@@ -148,24 +148,64 @@
         <div class="box-hub box-hub-3 fl">
           <div class="box-hub-content bhc3">
             <img src="img/service-hub.png" alt="Service-Hub">
-            <h3>Marketing Hub</h3>
-            <p>Marketing software to help you grow traffic, convert more visitors, and run complete inbound marketing campeign at scale.</p>
+            <h3>Service Hub</h3>
+            <p>Customer service software to help you connect with customers, exceed expectations, and turn them into promoters that grow your business</p>
             <p>POPOLAR FEATURE</p>
             <ul>
-              <li><i class="fa fa-check-circle" aria-hidden="true"></i>Lead Generation</li>
-              <li><i class="fa fa-check-circle" aria-hidden="true"></i>Marketing Automation</li>
-              <li><i class="fa fa-check-circle" aria-hidden="true"></i>Analitycs</li>
+              <li><i class="fa fa-check-circle" aria-hidden="true"></i><span>Tickets</span></li>
+              <li><i class="fa fa-check-circle" aria-hidden="true"></i><span>Customer Feedback</span></li>
+              <li><i class="fa fa-check-circle" aria-hidden="true"></i><span>Knowledge Base</span></li>
             </ul>
             <p><a class="button2" href="#">Learn More</a></p>
           </div>
+        </div>
+      </div>
+    </main>
+    <!--      fine main     -->
+
+
+    <!--      inizio infografica     -->
+
+    <div class="infografica-bg">
+      <div class="infografica-container container">
+        <div class="infografica-text font">
+          <h2>Learn and grow with award-winning support and a thriving community behind you.</h2>
+          <p class="weight">You don't have to go it alone. Master the inboound methodology and get the most out of your tools with HubSpot's legendary customer support team and a community of thousands of marketing and sales pros just like you.</p>
+        </div>
+        <div class="infografica clearfix">
+          <div class="info-box fl">
+
+          </div>
+          <div class="info-box fl">
+
+          </div>
+          <div class="info-box fl">
+
+          </div>
+          <div class="info-box fl">
+
+          </div>
+          <div class="info-box fl">
+
+          </div>
+          <div class="info-box fl">
+
+          </div>
+          <div class="info-box fl">
+
+          </div>
+          <div class="info-box fl">
+
+          </div>
+
         </div>
 
 
       </div>
 
+    </div>
+    <!--      fine info grafica     -->
 
-    </main>
-    <!--      fine main     -->
 
   </body>
 </html>
