--- a/index.html
+++ b/index.html
@@ -172,30 +172,46 @@
           <h2>Learn and grow with award-winning support and a thriving community behind you.</h2>
           <p class="weight">You don't have to go it alone. Master the inboound methodology and get the most out of your tools with HubSpot's legendary customer support team and a community of thousands of marketing and sales pros just like you.</p>
         </div>
-        <div class="infografica clearfix">
+        <div class="infografica font clearfix">
           <div class="info-box fl">
-
+            <img src="img/handshake.svg" alt="handshake">
+            <h4>150+</h4>
+            <p>HubSpot user groups</p>
           </div>
           <div class="info-box fl">
-
+            <img src="img/hubspot-blogs.svg" alt="hubspotblogs">
+            <h4>4.5M</h4>
+            <p>monthly visits</p>
           </div>
           <div class="info-box fl">
-
+            <img src="img/hubspot-academy.svg" alt="hubspotacademy">
+            <h4>155K+</h4>
+            <p>certified professionals</p>
           </div>
           <div class="info-box fl">
-
+            <img src="img/inbound.svg" alt="inbound">
+            <h4>21K+</h4>
+            <p>registered attendees</p>
           </div>
           <div class="info-box fl">
-
+            <img src="img/hubspot-connect.svg" alt="hubspot connect">
+            <h4>200+</h4>
+            <p>integrations</p>
           </div>
           <div class="info-box fl">
-
+            <img src="img/globe.svg" alt="globe">
+            <h4>6+</h4>
+            <p>languages</p>
           </div>
           <div class="info-box fl">
-
+            <img src="img/chat-text.svg" alt="chat-text">
+            <h4>2.6M+</h4>
+            <p>social foolowers</p>
           </div>
           <div class="info-box fl">
-
+            <img src="img/growth-hub.svg" alt="growth hub">
+            <h4>5K+</h4>
+            <p>profiles and counting</p>
           </div>
 
         </div>
