completato il "last-box"
mi manca il footer

--- a/index.html
+++ b/index.html
@@ -167,60 +167,134 @@
     <!--      inizio infografica     -->
 
     <div class="infografica-bg">
+
       <div class="infografica-container container">
+
         <div class="infografica-text font">
           <h2>Learn and grow with award-winning support and a thriving community behind you.</h2>
           <p class="weight">You don't have to go it alone. Master the inboound methodology and get the most out of your tools with HubSpot's legendary customer support team and a community of thousands of marketing and sales pros just like you.</p>
         </div>
+
         <div class="infografica font clearfix">
-          <div class="info-box fl">
+
+          <div class="info-box if1 fl">
             <img src="img/handshake.svg" alt="handshake">
             <h4>150+</h4>
             <p>HubSpot user groups</p>
           </div>
-          <div class="info-box fl">
+
+
+          <div class="info-box  fl">
             <img src="img/hubspot-blogs.svg" alt="hubspotblogs">
             <h4>4.5M</h4>
             <p>monthly visits</p>
           </div>
+
+
           <div class="info-box fl">
             <img src="img/hubspot-academy.svg" alt="hubspotacademy">
             <h4>155K+</h4>
             <p>certified professionals</p>
           </div>
+
+
           <div class="info-box fl">
             <img src="img/inbound.svg" alt="inbound">
             <h4>21K+</h4>
             <p>registered attendees</p>
           </div>
-          <div class="info-box fl">
+
+
+          <div class="info-box  fl">
             <img src="img/hubspot-connect.svg" alt="hubspot connect">
             <h4>200+</h4>
             <p>integrations</p>
           </div>
-          <div class="info-box fl">
+
+
+          <div class="info-box  fl">
             <img src="img/globe.svg" alt="globe">
             <h4>6+</h4>
             <p>languages</p>
           </div>
-          <div class="info-box fl">
+
+
+          <div class="info-box  fl">
             <img src="img/chat-text.svg" alt="chat-text">
             <h4>2.6M+</h4>
             <p>social foolowers</p>
           </div>
+
+
           <div class="info-box fl">
             <img src="img/growth-hub.svg" alt="growth hub">
             <h4>5K+</h4>
             <p>profiles and counting</p>
           </div>
 
-        </div>
 
+        </div>
+      </div>
+    </div>
+    <!--      fine info grafica     -->
+
+    <div class="last-container-bg">
+      <div class="last-container container font">
+        <img src="img/woman.webp" alt="woman">
+        <div class="row1 clearfix">
+          <div class="box-row-text fl">
+            <h2>64,500</h2>
+            <p class="weight">customers in over <b>100</b> countries growing their businesses with HubSpot </p>
+          </div>
+          <div class="logos fl clearfix">
+
+            <div class="box-logos fl">
+              <img src="img/soundcloud.webp" alt="soundcloud">
+            </div>
+
+            <div class="box-logos fl">
+              <img src="img/vmware.webp" alt="vmware">
+            </div>
+
+            <div class="box-logos fl">
+              <img src="img/subaru.webp" alt="subaru">
+            </div>
+
+            <div class="box-logos fl">
+              <img src="img/trello.webp" alt="trello">
+            </div>
+
+            <div class="box-logos fl">
+              <img src="img/g2.webp" alt="g2">
+            </div>
+
+            <div class="box-logos fl">
+              <img src="img/wwf.webp" alt="wwf">
+            </div>
+
+            <div class="box-logos fl">
+              <img src="img/survey-monkey.svg" alt="survey monkey">
+            </div>
+
+            <div class="box-logos fl">
+              <img src="img/classpass.webp" alt="classpass">
+            </div>
+          </div>
+        </div>
+        <div class="row2">
+          <div class="last-text">
+            <h2>Start Growing With HubSpot Today</h2>
+            <p class="weight">With tools to make every part of your process more human and a support team excited to help you, geting starded with inbound has never been easier.</p>
+            <p><a class="button2" href="#">GetHubspotFree</a></p>
+            <p class="weight">Get Started with FREE tools, or get more with our premium software</p>
+          </div>
+
+
+        </div>
 
       </div>
 
     </div>
-    <!--      fine info grafica     -->
 
 
   </body>
