--- a/index.html
+++ b/index.html
@@ -238,6 +238,8 @@
     </div>
     <!--      fine info grafica     -->
 
+
+    <!--      inizio ultimo container     -->
     <div class="last-container-bg">
       <div class="last-container container font">
         <img src="img/woman.webp" alt="woman">
@@ -288,13 +290,111 @@
             <p><a class="button2" href="#">GetHubspotFree</a></p>
             <p class="weight">Get Started with FREE tools, or get more with our premium software</p>
           </div>
+        </div>
+      </div>
+    </div>
+    <!--      fine ultimo container     -->
 
 
+    <!--      inizio footer     -->
+    <footer class="font">
+      <div class="link-container container clearfix">
+
+        <div class="link-box fl">
+          <div class="link-box-content">
+            <h5>Increase You Traffic</h5>
+            <ul>
+              <li>Ad Software</li>
+              <li>Blog Software</li>
+              <li>SEO Software</li>
+              <li>Social Media Software</li>
+              <li>Content Management System</li>
+            </ul>
+          </div>
+        </div>
+
+
+        <div class="link-box fl">
+          <div class="link-box-content">
+            <h5>Connect With Leads</h5>
+            <ul>
+              <li>Find New Prospects</li>
+              <li>Email Tracking</li>
+              <li>Sales Email Templates</li>
+              <li>Click to Call Your Leads</li>
+              <li>Email Marketing</li>
+            </ul>
+          </div>
+        </div>
+
+
+        <div class="link-box fl">
+          <div class="link-box-content">
+            <h5>Close and Manage Leads</h5>
+            <ul>
+              <li>Document Tracking Tool</li>
+              <li>Meeting Schedule Tool</li>
+              <li>Sales Automation Tool</li>
+              <li>Lead Management Tool</li>
+              <li>Pipeline Management Tool</li>
+            </ul>
+          </div>
+        </div>
+
+
+        <div class="link-box fl">
+          <div class="link-box-content">
+            <h5>Support and Tools</h5>
+            <ul>
+              <li>HubSpot Partners</li>
+              <li>Join a Local User Group</li>
+              <li>Get a Free Website Report</li>
+              <li>HubSpot Templates</li>
+              <li>Free Tools & Generators</li>
+            </ul>
+            <div class="button-footer">
+              <span><a href="#">Contact HubSpot Support</a></span>
+            </div>
+            <div class="social-icon clearfix">
+              <ul>
+                <li><i class="fl icons fa fa-facebook" aria-hidden="true"></i></li>
+                <li><i class="fl icons fa fa-instagram" aria-hidden="true"></i></li>
+                <li><i class="fl icons fa fa-youtube-play" aria-hidden="true"></i></li>
+                <li><i class="fl icons fa fa-twitter" aria-hidden="true"></i></li>
+                <li><i class="fl icons fa fa-linkedin" aria-hidden="true"></i></li>
+              </ul>
+            </div>
+          </div>
         </div>
 
       </div>
 
-    </div>
+      <div class="languages container">
+        <ul>
+          <li><a href="#">English</a></li>
+          <li><a href="#">Deutsch</a></li>
+          <li><a href="#">日本</a></li>
+          <li><a href="#">Espanol</a></li>
+          <li><a href="#">Portugues</a></li>
+          <li><a href="#">Francais</a></li>
+        </ul>
+      </div>
+
+      <div class="footer-bottom container clearfix">
+        <div class="copyright fl">
+          <img src="img/hubspot-white.svg" alt="hubspot">
+          <p>Copyright © 2019 HubSpot,Inc.</p>
+        </div>
+        <div class="legal fr">
+          <ul>
+            <li>Legal Stuff</li>
+            <li>Pivacy Policy</li>
+          </ul>
+        </div>
+
+      </div>
+
+    </footer>
 
 
   </body>
