--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         <div class="cube-content">
           <img src="img/cubo.png" alt="cubo">
           <h2>Powerful Alone. Better Together</h2>
-          <p class="weight">HubSpot offers a full stack of software for marketing, sales, and customer service with a completely free CRM at its core. They're powerfull alone - but even better when used together</p>
+          <p class="weight">HubSpot offers a full stack of software for marketing, sales, and customer service with a completely free CRM at its core. They're powerfull alone &mdash; but even better when used together</p>
         </div>
       </div>
       <!--        fine box cubo       -->
@@ -177,58 +177,58 @@
 
         <div class="infografica font clearfix">
 
-          <div class="info-box if1 fl">
+          <div class="border-bottom border-right info-box if1 fl">
             <img src="img/handshake.svg" alt="handshake">
-            <h4>150+</h4>
+            <h4>15 <span class="plus">+</span></h4>
             <p>HubSpot user groups</p>
           </div>
 
 
-          <div class="info-box  fl">
+          <div class="border-bottom border-right info-box  fl">
             <img src="img/hubspot-blogs.svg" alt="hubspotblogs">
-            <h4>4.5M</h4>
+            <h4>4.5M <span class="plus">+</span></h4>
             <p>monthly visits</p>
           </div>
 
 
-          <div class="info-box fl">
+          <div class="border-bottom border-right info-box fl">
             <img src="img/hubspot-academy.svg" alt="hubspotacademy">
-            <h4>155K+</h4>
+            <h4>155K <span class="plus">+</span></h4>
             <p>certified professionals</p>
           </div>
 
 
-          <div class="info-box fl">
+          <div class="border-bottom info-box fl">
             <img src="img/inbound.svg" alt="inbound">
-            <h4>21K+</h4>
+            <h4>21K <span class="plus">+</span></h4>
             <p>registered attendees</p>
           </div>
 
 
-          <div class="info-box  fl">
+          <div class="border-right info-box  fl">
             <img src="img/hubspot-connect.svg" alt="hubspot connect">
-            <h4>200+</h4>
+            <h4>200 <span class="plus">+</span></h4>
             <p>integrations</p>
           </div>
 
 
-          <div class="info-box  fl">
+          <div class="border-right info-box  fl">
             <img src="img/globe.svg" alt="globe">
-            <h4>6+</h4>
+            <h4>6 <span class="plus">+</span></h4>
             <p>languages</p>
           </div>
 
 
-          <div class="info-box  fl">
+          <div class="border-right info-box  fl">
             <img src="img/chat-text.svg" alt="chat-text">
-            <h4>2.6M+</h4>
+            <h4>2.6M <span class="plus">+</span></h4>
             <p>social foolowers</p>
           </div>
 
 
           <div class="info-box fl">
             <img src="img/growth-hub.svg" alt="growth hub">
-            <h4>5K+</h4>
+            <h4>5K <span class="plus">+</span></h4>
             <p>profiles and counting</p>
           </div>
 
@@ -304,11 +304,11 @@
           <div class="link-box-content">
             <h5>Increase You Traffic</h5>
             <ul>
-              <li>Ad Software</li>
-              <li>Blog Software</li>
-              <li>SEO Software</li>
-              <li>Social Media Software</li>
-              <li>Content Management System</li>
+              <li><a href="#">Ad Software</a></li>
+              <li><a href="#">Blog Software</a></li>
+              <li><a href="#">SEO Software</a></li>
+              <li><a href="#">Social Media Software</a></li>
+              <li><a href="#">Content Management System</a></li>
             </ul>
           </div>
         </div>
@@ -318,11 +318,11 @@
           <div class="link-box-content">
             <h5>Connect With Leads</h5>
             <ul>
-              <li>Find New Prospects</li>
-              <li>Email Tracking</li>
-              <li>Sales Email Templates</li>
-              <li>Click to Call Your Leads</li>
-              <li>Email Marketing</li>
+              <li><a href="#">Find New Prospects</a></li>
+              <li><a href="#">Email Tracking</a></li>
+              <li><a href="#">Sales Email Templates</a></li>
+              <li><a href="#">Click to Call Your Leads</a></li>
+              <li><a href="#">Email Marketing</a></li>
             </ul>
           </div>
         </div>
@@ -332,11 +332,11 @@
           <div class="link-box-content">
             <h5>Close and Manage Leads</h5>
             <ul>
-              <li>Document Tracking Tool</li>
-              <li>Meeting Schedule Tool</li>
-              <li>Sales Automation Tool</li>
-              <li>Lead Management Tool</li>
-              <li>Pipeline Management Tool</li>
+              <li><a href="#">Document Tracking Tool</a></li>
+              <li><a href="#">Meeting Schedule Tool</a></li>
+              <li><a href="#">Sales Automation Tool</a></li>
+              <li><a href="#">Lead Management Tool</a></li>
+              <li><a href="#">Pipeline Management Tool</a></li>
             </ul>
           </div>
         </div>
@@ -346,11 +346,11 @@
           <div class="link-box-content">
             <h5>Support and Tools</h5>
             <ul>
-              <li>HubSpot Partners</li>
-              <li>Join a Local User Group</li>
-              <li>Get a Free Website Report</li>
-              <li>HubSpot Templates</li>
-              <li>Free Tools & Generators</li>
+              <li><a href="#">HubSpot Partners</a></li>
+              <li><a href="#">Join a Local User Group</a></li>
+              <li><a href="#">Get a Free Website Report</a></li>
+              <li><a href="#">HubSpot Templates</a></li>
+              <li><a href="#">Free Tools & Generators</a></li>
             </ul>
             <div class="button-footer">
               <span><a href="#">Contact HubSpot Support</a></span>
@@ -387,8 +387,8 @@
         </div>
         <div class="legal fr">
           <ul>
-            <li>Legal Stuff</li>
-            <li>Pivacy Policy</li>
+            <li><a href="#">Legal Stuff</a></li>
+            <li><a href="#">Pivacy Policy</a></li>
           </ul>
         </div>
 
